--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "library-template",
   "version": "0.0.0",
+  "type": "module",
   "main": "lib/cjs/index.js",
-  "module": "lib/esm/index.js",
+  "types": "lib/types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./lib/types/index.d.ts",
+      "import": "./lib/esm/index.js",
+      "require": "./lib/cjs/index.js"
+    }
+  },
   "files": [
     "lib"
   ],
@@ -11,6 +19,6 @@
   },
   "dependencies": {
     "@tsconfig/recommended": "1.0.1",
-    "typescript": "4.6.4"
+    "typescript": "4.7.2"
   }
 }
