--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -2,7 +2,7 @@
   "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
     "outDir": "lib/esm",
-    "module": "ES2020"
+    "module": "Node16"
   },
   "files": ["src/index.ts"]
 }
