--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
     "outDir": "lib/cjs",
+    "module": "CommonJS",
 
     "declaration": true,
     "declarationDir": "lib/types"
